--- a/designs.html
+++ b/designs.html
@@ -111,31 +111,31 @@
 
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/21.jpg">
+      <img src="img/21.JPG">
     </div>
 
     <div class="item">
-      <img src="img/22.jpg">
+      <img src="img/22.JPG">
     </div>
 
     <div class="item">
-      <img src="img/23.jpg">
+      <img src="img/23.JPG">
     </div>
 
     <div class="item">
-      <img src="img/24.jpg">
+      <img src="img/24.JPG">
     </div>
 
     <div class="item">
-      <img src="img/25.jpg">
+      <img src="img/25.JPG">
     </div>
 
     <div class="item">
-      <img src="img/26.jpg">
+      <img src="img/26.JPG">
     </div>
 
     <div class="item">
-      <img src="img/27.jpg">
+      <img src="img/27.JPG">
     </div>
 </div>
 </div>
